--- a/Assets/UIDocuments/ClassEditor.uxml
+++ b/Assets/UIDocuments/ClassEditor.uxml
@@ -2,8 +2,8 @@
     <ui:Template name="GlobalStringEditor" src="project://database/Assets/UIDocuments/GlobalStringEditor.uxml?fileID=9197481963319205126&amp;guid=bbf36dc1793baa44a987432580e3d674&amp;type=3#GlobalStringEditor" />
     <ui:Template name="ArmorRatingEditor" src="project://database/Assets/UIDocuments/ArmorRatingEditor.uxml?fileID=9197481963319205126&amp;guid=37ee59f7e2be1ae42a09a6e60180ee72&amp;type=3#ArmorRatingEditor" />
     <Style src="project://database/Assets/UIDocuments/styles/style.uss?fileID=7433441132597879392&amp;guid=2bc9a89e260078e449dd456da4bfcf64&amp;type=3#style" />
-    <ui:VisualElement data-source-type="GameManager, Assembly-CSharp" style="flex-grow: 1; background-color: rgb(240, 240, 240);">
-        <ui:Label text="Class Editor" class="title" style="background-color: rgb(200, 200, 200); margin-top: 0; padding-top: 0;" />
+    <ui:VisualElement data-source-type="GameManager, Assembly-CSharp" class="panel">
+        <ui:Label text="Class Editor" class="title" />
         <ui:VisualElement style="flex-grow: 1; flex-direction: row;">
             <ui:VisualElement data-source-path="navalGameState" style="flex-grow: 1; width: 20%; border-right-width: 1px; border-left-color: rgb(0, 0, 0); border-right-color: rgb(0, 0, 0); border-top-color: rgb(0, 0, 0); border-bottom-color: rgb(0, 0, 0);">
                 <ui:ListView show-add-remove-footer="true" data-source-path="shipClasses" binding-source-selection-mode="AutoAssign" name="ShipClassListView" item-template="project://database/Assets/UIDocuments/Templates/ShipClassLabel.uxml?fileID=9197481963319205126&amp;guid=eeb346bb672489a408ab64d0ea933ed6&amp;type=3#ShipClassLabel" fixed-item-height="24" style="flex-grow: 1;" />
