--- a/Assets/UIDocuments/TopTabs.uxml
+++ b/Assets/UIDocuments/TopTabs.uxml
@@ -11,6 +11,7 @@
                 <ui:VisualElement style="flex-grow: 1; flex-direction: row;">
                     <ui:Button text="Class Editor" name="ClassEditorButton" />
                     <ui:Button text="Ship Log Editor" name="ShipLogEditorButton" />
+                    <ui:Button text="OOB Editor" name="OOBEditorButton" />
                 </ui:VisualElement>
             </ui:Tab>
         </ui:TabView>
