--- a/Assets/UIDocuments/BatteryRecordEditor.uxml
+++ b/Assets/UIDocuments/BatteryRecordEditor.uxml
@@ -64,6 +64,11 @@
                 <ui:Column name="extremeNarrow" title="E/N" cell-template="project://database/Assets/UIDocuments/Templates/FireControlTableRecord/FireControlTableRecordExtremeNarrow.uxml?fileID=9197481963319205126&amp;guid=3bc307bf85d3c594aace6ce31b6eb20f&amp;type=3#FireControlTableRecordExtremeNarrow" width="11%" />
             </ui:Columns>
         </ui:MultiColumnListView>
+        <ui:EnumField label="Penetration Base Ammu" value="Center" type="NavalCombatCore.AmmunitionType, Assembly-CSharp">
+            <Bindings>
+                <ui:DataBinding property="value" data-source-path="penetrationTableBaseType" binding-mode="TwoWay" />
+            </Bindings>
+        </ui:EnumField>
         <ui:MultiColumnListView binding-source-selection-mode="AutoAssign" header-title="Penetration Table" show-add-remove-footer="true" show-foldout-header="true" name="PenetrationTableMultiColumnListView" data-source-path="penetrationTableRecords">
             <ui:Columns>
                 <ui:Column name="distanceYards" title="Distance Yards" cell-template="project://database/Assets/UIDocuments/Templates/PenetrationTableRecord/PenetrationTableRecordDistanceYardsCell.uxml?fileID=9197481963319205126&amp;guid=cd1fda2a8714e5b43b7810a7b5bc29e6&amp;type=3#PenetrationTableRecordDistanceYardsCell" width="20%" />
