--- a/Assets/UIDocuments/ClassEditor.uxml
+++ b/Assets/UIDocuments/ClassEditor.uxml
@@ -6,7 +6,7 @@
         <ui:Label text="Class Editor" class="title" />
         <ui:VisualElement style="flex-grow: 1; flex-direction: row;">
             <ui:VisualElement data-source-path="navalGameState" style="flex-grow: 1; width: 20%; border-right-width: 1px; border-left-color: rgb(0, 0, 0); border-right-color: rgb(0, 0, 0); border-top-color: rgb(0, 0, 0); border-bottom-color: rgb(0, 0, 0);">
-                <ui:ListView show-add-remove-footer="true" data-source-path="shipClasses" binding-source-selection-mode="AutoAssign" name="ShipClassListView" item-template="project://database/Assets/UIDocuments/Templates/ShipClassLabel.uxml?fileID=9197481963319205126&amp;guid=eeb346bb672489a408ab64d0ea933ed6&amp;type=3#ShipClassLabel" fixed-item-height="24" style="flex-grow: 1;" />
+                <ui:ListView show-add-remove-footer="true" data-source-path="shipClasses" binding-source-selection-mode="AutoAssign" name="ShipClassListView" item-template="project://database/Assets/UIDocuments/Templates/ShipClassLabel.uxml?fileID=9197481963319205126&amp;guid=eeb346bb672489a408ab64d0ea933ed6&amp;type=3#ShipClassLabel" fixed-item-height="24" reorderable="true" style="flex-grow: 1;" />
                 <ui:VisualElement style="flex-shrink: 0;">
                     <ui:VisualElement style="flex-grow: 1; flex-direction: row;">
                         <ui:Button text="Import" name="ImportButton" style="flex-basis: 100px; flex-grow: 1; flex-shrink: 1;" />
@@ -167,16 +167,6 @@
                                                 <ui:DataBinding property="value" data-source-path="draftFoot" binding-mode="TwoWay" />
                                             </Bindings>
                                         </ui:FloatField>
-                                        <ui:TextField label="Launch">
-                                            <Bindings>
-                                                <ui:DataBinding property="value" data-source-path="launchedDate" binding-mode="TwoWay" />
-                                            </Bindings>
-                                        </ui:TextField>
-                                        <ui:TextField label="Complated">
-                                            <Bindings>
-                                                <ui:DataBinding property="value" data-source-path="completedDate" binding-mode="TwoWay" />
-                                            </Bindings>
-                                        </ui:TextField>
                                         <ui:SliderInt label="Applicable Year Begin" value="180" high-value="1945" low-value="1880" show-input-field="true">
                                             <Bindings>
                                                 <ui:DataBinding property="value" data-source-path="applicableYearBegin" binding-mode="TwoWay" />
@@ -196,9 +186,6 @@
                                     <ui:VisualElement style="flex-grow: 1; flex-basis: 100px; padding-left: 1px; padding-bottom: 1px; padding-right: 1px; padding-top: 1px;">
                                         <ui:Instance template="GlobalStringEditor" data-source-path="builderDesc">
                                             <AttributeOverrides element-name="GlobalStringLabel" text="Builder" />
-                                        </ui:Instance>
-                                        <ui:Instance template="GlobalStringEditor" data-source-path="fateDesc">
-                                            <AttributeOverrides element-name="GlobalStringLabel" text="Fate" />
                                         </ui:Instance>
                                         <ui:Instance template="GlobalStringEditor" data-source-path="engineDesc">
                                             <AttributeOverrides element-name="GlobalStringLabel" text="Engines" />
