Update XML data and improve tooling

--- a/Assets/UIDocuments/BatteryStatusEditor.uxml
+++ b/Assets/UIDocuments/BatteryStatusEditor.uxml
@@ -1,12 +1,22 @@
 <ui:UXML xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" noNamespaceSchemaLocation="../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
     <Style src="project://database/Assets/UIDocuments/styles/style.uss?fileID=7433441132597879392&amp;guid=2bc9a89e260078e449dd456da4bfcf64&amp;type=3#style" />
     <ui:VisualElement data-source-type="NavalCombatCore.BatteryStatus, Assembly-CSharp" style="flex-grow: 1;">
-        <ui:Label text="battery record&apos;s merged name">
-            <Bindings>
-                <ui:DataBinding property="text" binding-mode="ToTarget" source-to-ui-converters="BatteryStatus =&gt; BatteryStatus&apos;s BatteryRecord&apos;s Name" />
-            </Bindings>
-        </ui:Label>
+        <ui:VisualElement style="flex-grow: 0; flex-direction: row; flex-shrink: 0;">
+            <ui:Label text="battery record&apos;s merged name">
+                <Bindings>
+                    <ui:DataBinding property="text" binding-mode="ToTarget" source-to-ui-converters="BatteryStatus =&gt; BatteryStatus&apos;s BatteryRecord&apos;s Name" />
+                </Bindings>
+            </ui:Label>
+        </ui:VisualElement>
         <ui:VisualElement style="flex-grow: 0; flex-shrink: 0;">
+            <ui:VisualElement style="flex-grow: 0; flex-shrink: 0; flex-direction: row;">
+                <ui:Label text="Capacity:" />
+                <ui:Label>
+                    <Bindings>
+                        <ui:DataBinding property="text" data-source-path="batteryRecord.ammunitionCapacity" binding-mode="ToTarget" />
+                    </Bindings>
+                </ui:Label>
+            </ui:VisualElement>
             <ui:VisualElement data-source-path="ammunition" style="flex-grow: 0;">
                 <ui:VisualElement style="flex-grow: 0; flex-direction: row;">
                     <ui:IntegerField label="AP" class="size50" style="flex-grow: 1; flex-basis: 50px;">
