--- a/Assets/UIDocuments/ShipLogEditor.uxml
+++ b/Assets/UIDocuments/ShipLogEditor.uxml
@@ -32,13 +32,27 @@
                             <ui:Tab label="Basic">
                                 <ui:VisualElement style="flex-grow: 1;">
                                     <ui:VisualElement style="flex-grow: 1; flex-direction: row;">
-                                        <ui:VisualElement style="flex-grow: 1; flex-basis: 100px;">
+                                        <ui:VisualElement style="flex-grow: 1.4; flex-basis: 100px;">
                                             <ui:Instance template="GlobalStringEditor" data-source-path="name">
                                                 <AttributeOverrides element-name="GlobalStringLabel" text="Ship Name" />
                                             </ui:Instance>
-                                            <ui:Instance template="GlobalStringEditor" data-source-path="captain">
-                                                <AttributeOverrides element-name="GlobalStringLabel" text="Captain" />
-                                            </ui:Instance>
+                                            <ui:VisualElement style="flex-grow: 1; flex-direction: row;">
+                                                <ui:VisualElement style="flex-grow: 1; flex-shrink: 0;">
+                                                    <ui:Instance template="GlobalStringEditor" data-source-path="captain">
+                                                        <AttributeOverrides element-name="GlobalStringLabel" text="Captain" />
+                                                    </ui:Instance>
+                                                    <ui:TextField label="Captain Portrait Code">
+                                                        <Bindings>
+                                                            <ui:DataBinding property="value" data-source-path="captainPortraitCode" binding-mode="TwoWay" />
+                                                        </Bindings>
+                                                    </ui:TextField>
+                                                </ui:VisualElement>
+                                                <ui:VisualElement style="flex-grow: 0; flex-shrink: 0; flex-basis: 100px; -unity-background-scale-mode: scale-to-fit;">
+                                                    <Bindings>
+                                                        <ui:DataBinding property="style.backgroundImage" data-source-path="captainPortraitCode" binding-mode="ToTarget" source-to-ui-converters="string (Leader Portrait) =&gt; StyleBackground" />
+                                                    </Bindings>
+                                                </ui:VisualElement>
+                                            </ui:VisualElement>
                                             <ui:SliderInt label="Crew Rating" high-value="3" low-value="-1" show-input-field="true">
                                                 <Bindings>
                                                     <ui:DataBinding property="value" data-source-path="crewRating" binding-mode="TwoWay" />
