--- a/Assets/UIDocuments/TopTabs.uxml
+++ b/Assets/UIDocuments/TopTabs.uxml
@@ -13,6 +13,7 @@
             </ui:Tab>
             <ui:Tab label="Editor">
                 <ui:VisualElement style="flex-grow: 1; flex-direction: row;">
+                    <ui:Button text="Leader Editor" name="LeaderEditorButton" />
                     <ui:Button text="Class Editor" name="ClassEditorButton" />
                     <ui:Button text="Ship Log Editor" name="ShipLogEditorButton" />
                     <ui:Button text="OOB Editor" name="OOBEditorButton" />
